# Memoir

./: .buildinfo  .gitattributes  .gitignore  README.md  batch_preprocessing.html  examples.example_1.html  examples.html  genindex.html  index.html  index.md  memoir.batch_preprocessing.channels.html  memoir.batch_preprocessing.data_augmentation.html  memoir.batch_preprocessing.feature_scaling.html  memoir.batch_preprocessing.html  memoir.batch_preprocessing.train_test_split.html  memoir.data.batch_generator.html  memoir.data.html  memoir.data.video_to_frames.html  memoir.dense_autoencoders.ae_network.html  memoir.dense_autoencoders.decorators.html  memoir.dense_autoencoders.dense_ae.html  memoir.dense_autoencoders.dense_network_directory.html  memoir.dense_autoencoders.html  memoir.dense_autoencoders.omething.html  memoir.dense_autoencoders.saving.html  memoir.dense_autoencoders.sparse_ae.html  memoir.dense_autoencoders.test.html  memoir.html  memoir.stats.html  memoir.stats.mean.html  memoir.stats.save_stats.html  memoir.stats.std.html  modules.html  objects.inv  py-modindex.html  requirements.txt  requirements.yml  search.html  searchindex.js  setup.cfg  (+1 more)
Data/: batch_generator.py  batch_processor.py  data_augmentation.py  readme.md  video_to_frames.py
Sphinx/: conf.py  index.rst
Vanilla_Neural_Network/: batch_generator.py  video_to_frames.py  vnn.py
_modules/: index.html
_sources/: examples.example_1.rst.txt  index.rst.txt  memoir.batch_preprocessing.channels.rst.txt  memoir.batch_preprocessing.feature_scaling.rst.txt  memoir.batch_preprocessing.rst.txt  memoir.batch_preprocessing.train_test_split.rst.txt  memoir.data.batch_generator.rst.txt  memoir.data.rst.txt  memoir.data.video_to_frames.rst.txt  memoir.dense_autoencoders.ae_network.rst.txt  memoir.dense_autoencoders.decorators.rst.txt  memoir.rst.txt  (+12 more)
(+147 files in other folders)
