[metadata]
name = Memoir
version = 1.0.0
author = Shivam Chaudhary
author_email = vs.251618@gmail.com
license = MIT
description = Deep Learning Package for Video Colorization
keywords =
    video colorization
    image colorization
    deep learning
    machine learning
    computer vision
    neural networks
url = https://github.com/andy6975/Memoir/
download_url = https://github.com/andy6975/Memoir
long_description = file: README.md
classifiers =
        Development Status :: 1 - beta
        Intended Audience :: Education
        Intended Audience :: DL/ML/Research
        Intended Audience :: Hobby
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Scientific/Engineering :: Deep Learning
        Topic :: Scientific/Engineering :: Machine Learning
        Topic :: Scientific/Engineering :: Computer Vision

[options]
package_dir =
    = memoir
packages = find:
zip_safe = False
install_requires =
        numpy
        opencv-python >= 3.4.1.1.5
        scikit-image>= 0.14.0
include_package_data = True
python_requires = >= 3.5

[options.packages.find]
where = memoir

# [options.extras_require]
# dev =
#         black ; python_version>="3.6"
#         coverage
#         isort
#         pytest
#         pytest-xdist
#         pytest-cov<2.6.0
#         pycodestyle
#         sphinx
#         alabaster
#         nbsphinx
#         ipython>=5.0
#         jupyter-client
#         ipykernel
#         ipywidgets
#         tox
#         jupyter_sphinx